Refactored feed refresh
