# crates/api/src/feed/mod.rs
@@ -1,8 +1,6 @@
 use axum::{Router, routing};
-use chrono::{DateTime, Utc};
 use url::Url;
 use utoipa::OpenApi;
-use uuid::Uuid;
 
 use crate::ApiState;
 
@@ -13,7 +11,7 @@ const FEEDS_TAG: &str = "Feeds";
 
 #[derive(OpenApi)]
 #[openapi(
-    components(schemas(Feed, detect_feeds::FeedDetect, detect_feeds::FeedDetected)),
+    components(schemas(FeedScraped, detect_feeds::FeedDetect, detect_feeds::FeedDetected)),
     paths(detect_feeds::handler, scrape_feed::handler)
 )]
 pub(crate) struct FeedApi;
@@ -29,9 +27,7 @@ impl FeedApi {
 /// RSS feed
 #[derive(Debug, Clone, serde::Serialize, utoipa::ToSchema)]
 #[serde(rename_all = "camelCase")]
-pub(crate) struct Feed {
-    /// Unique identifier of the feed
-    id: Uuid,
+pub(crate) struct FeedScraped {
     /// URL to scrape for feed updates
     source_url: Url,
     /// URL of the webpage the feed links to
@@ -41,20 +37,15 @@ pub(crate) struct Feed {
     /// Description of the feed
     #[schema(required)]
     description: Option<String>,
-    /// Timestamp at which the feed was refreshed
-    #[schema(required)]
-    refreshed_at: Option<DateTime<Utc>>,
 }
 
-impl From<colette_ingestion::Feed> for Feed {
-    fn from(value: colette_ingestion::Feed) -> Self {
+impl From<colette_handler::FeedCreated> for FeedScraped {
+    fn from(value: colette_handler::FeedCreated) -> Self {
         Self {
-            id: value.id.as_inner(),
             source_url: value.source_url,
             link: value.link,
             title: value.title,
             description: value.description,
-            refreshed_at: value.refreshed_at,
         }
     }
 }
